kubernetes/celery-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery
          image: cr.yandex/crpvjki4829dbb6omp95/templatehw4:latest
          command: ["/app/scripts/celery.sh", "celery"]
          volumeMounts:
            - name: app-data
              mountPath: /app/data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data-pvc
