kubernetes/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      volumes:
        - name: static-data
          emptyDir: {} # Общий временный том для статики внутри Пода
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data-pvc
        - name: nginx-conf
          configMap:
            name: nginx-config
      containers:
        - name: django
          image: cr.yandex/crpvjki4829dbb6omp95/templatehw4:latest
          command: ["/app/scripts/entrypoint.sh"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-data
              mountPath: /static
            - name: app-data
              mountPath: /app/data

        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-data
              mountPath: /static
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
