kubernetes/flower-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  type: NodePort
  selector:
    app: flower-worker
  ports:
    - port: 5555
      targetPort: 5555
      nodePort: 30555
