kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://vcrostin.space"
spec:
  rules:
    - host: vcrostin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80

    - host: www.vcrostin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 8000
    - host: vcrostin.space
      http:
        paths:
          - path: /monitor/
            pathType: Prefix
            backend:
              service:
                name: flower-service
                port:
                  number: 5555
